Sec52_Chap466-XXX: optimized Test code